--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,7 @@
     "@nestjs/core": "11.1.6",
     "@nestjs/jwt": "11.0.0",
     "@nestjs/passport": "11.0.5",
-    "@nestjs/platform-express": "11.1.6",
+    "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "11.2.0",
     "@nestjs/typeorm": "11.0.0",
     "@types/multer-s3": "3.0.3",
@@ -55,7 +55,7 @@
     "dotenv": "17.2.1",
     "handlebars": "4.7.8",
     "ms": "2.1.3",
-    "multer": "2.0.2",
+    "multer": "^2.0.2",
     "multer-s3": "3.0.1",
     "nestjs-i18n": "10.5.1",
     "nodemailer": "7.0.5",
@@ -85,7 +85,7 @@
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/ms": "2.1.0",
-    "@types/multer": "2.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "22.17.2",
     "@types/passport-anonymous": "1.0.5",
     "@types/passport-jwt": "4.0.1",
